# corelight-threatgrid-example

./: .gitignore  .pre-commit-config.yaml  README.md  config.py.example  filewatcher2.py  pyproject.toml  start_filewatcher.sh  threatgrid_api.py
corelight_threatgrid/: SampleFile.py  config.py.example  filewatcher2.py
